--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!doctype html>
 <html>
   <head>
-    <title>BC Video Fix - Firefox</title>
+    <title>BC Video Fix - for Firefox</title>
   </head>
   <body>
-    <h1>BC Video Fix - Firefox</h1>
+    <h1>BC Video Fix - for Firefox</h1>
     <button id="fixVideo">Fix Video!</button>
-	 <script src="fix.js"></script>
+	<button id="dlVideo">Download Video!</button>
+	<a href="#" download id="download">Save As (right-click here, after clicking the Download button)</a>
+	<script src="fix.js"></script>
   </body>
 </html>
