Changed the dl link to hidden before being generated. Renamed the dl button. Fixed an issue where you could only download while being on the fixed video.

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <h1>BC Video Fix - for Firefox</h1>
     <button id="fixVideo">Fix Video!</button>
 	<hr>
-	<button id="dlVideo">Download Video!</button>
-	<a href="#" download id="download">Save As (right-click here, after clicking the Download button)</a>
+	<button id="dlVideo">Generate Download Link!</button>
+	<a href="#" download id="download">Download Link(right-click here and choose "Save As")</a>
 	<hr>
 	Search via an external search engine:<br>
 	<select id="selectSearchEngine">
