--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <html>
   <head>
-    <title>BC Video Fix - for Firefox</title>
+    <title>BC Video Fix FF</title>
 	<link rel="stylesheet" type="text/css" href="css/main.css">
   </head>
   <body>
-    <h1>BC Video Fix - for Firefox</h1>
+    <h1>BC Video Fix FF</h1>
     <button id="fixVideo">Fix Video!</button>
 	<hr>
 	<button id="dlVideo">Generate Download Link!</button>
