--- a/index.html
+++ b/index.html
@@ -5,22 +5,31 @@
 	<link rel="stylesheet" type="text/css" href="css/main.css">
   </head>
   <body>
-    <h1>BC Video Fix - for Firefox</h1>
-    <button id="fixVideo">Fix Video!</button>
+    <h1><img id="logoImgLeft" src="/img/icon/icon-48.png" alt="BC Video Fix Logo" width="48" height="48">BC Video Fix - for Firefox</h1>
+	<div id="selectPlatformExplanationText">Select the website from which you want to download:</div>
+	<select id="selectPlatform">
+		<option value="bitchute">Bitchute</option>	
+		<option value="odysee">Odysee</option>
+	</select>
 	<hr>
 	<button id="dlVideo">Generate Download Link!</button>
+	<hr>
 	<a href="#" download id="download">Download Link(right-click here and choose "Save As")</a>
 	<hr>
-	Search via an external search engine:<br>
-	<select id="selectSearchEngine">
-		<option value="duckduckgo">DuckDuckGo</option>	
-		<option value="google">Google</option>
-		<option value="bing">Bing</option>
-		<option value="qwant">Qwant</option>
-		<option value="yandex">Yandex</option>
-	</select>
-	<input id="myquery" name="myquery" placeholder="your search query">
-	<button id="search">Search</button>
+	<div id="bcExtrasContainer">
+		<button id="fixVideo">Fix Video!</button>
+		<hr>
+		Search via an external search engine:<br>
+		<select id="selectSearchEngine">
+			<option value="duckduckgo">DuckDuckGo</option>	
+			<option value="google">Google</option>
+			<option value="bing">Bing</option>
+			<option value="qwant">Qwant</option>
+			<option value="yandex">Yandex</option>
+		</select>
+		<input id="myquery" name="myquery" placeholder="your search query">
+		<button id="search">Search</button>
+	</div>
 	<script src="js/fix.js"></script>
 	<script src="js/query.js"></script>
   </body>
